--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "url": "https://github.com/gracepchen/cogs121/issues"
   },
   "dependencies": {
-    "express":"3.x",
+    "express":"^4.16.3",
     "express3-handlebars": "*"
   }
 }
