--- a/package.json
+++ b/package.json
@@ -1,22 +1,15 @@
 {
-  "name": "point-poppy",
-  "version": "0.0.0",
+  "name": "PointPoppy",
+  "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gracepchen/cogs121.git"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/gracepchen/cogs121/issues"
-  },
   "dependencies": {
-    "express":"^4.16.3",
-    "express3-handlebars": "*"
+    "express": "^4.16.3",
+    "jquery": "^3.3.1"
   }
 }
