--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "consolidate": "^0.15.1",
     "express": "^4.16.3",
     "jquery": "^3.3.1"
   }
