--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "consolidate": "^0.15.1",
     "express": "^4.16.3",
     "jquery": "^3.3.1",
-    "nodemon": "^1.17.3"
+    "nodemon": "^1.17.3",
+    "unirest": "^0.5.1"
   }
 }
