--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "image-compressor": "^1.2.0",
     "jquery": "^3.3.1",
     "nodemon": "^1.17.3",
+    "request": "^2.85.0",
     "unirest": "^0.5.1"
   }
 }
