--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "consolidate": "^0.15.1",
     "express": "^4.16.3",
     "image-compressor": "^1.2.0",
